--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.17",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   },
