edited env example

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ host = "<YOUR_HOST>"
 username = "<YOUR_USERNAME>"
 password = "<YOUR_PASSWORD>"
 database = "<YOUR_DATABASE>"
+
+email = "<YOUR_EMAIL>"
+pass = "<YOUR_PASSWORD_EMAIL>"
